Fix missing margin between sponsor cards

--- a/src/assets/scss/pages/sponsor.scss
+++ b/src/assets/scss/pages/sponsor.scss
@@ -40,6 +40,10 @@
     }
 
     .sponsor-container {
+      &:not(:first-child) {
+        margin-top: 1rem;
+      }
+
       &::after {
         content: "";
         clear: both;
